Fixed some responsive alignments v2

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body {
   color: var(--clr-white);
   background-color: var(--clr-purple-500);
   text-align: center;
+  display: grid;
 }
 .box__1 h1 {
   font-size: 3rem;
